# Power_Systems_5_Assignments

./: .env  README.md  data.csv  main.py  pyproject.toml  requirements.txt  yes.ipynb
Assignment_1/: Assignment_1_Question_2.ipynb
Assignment_2/: Assignment_2_Question_1.ipynb  Assignment_2_Question_1.py  Assignment_2_Question_4.ipynb  question_4_inputs.csv
Assignment_3/: 2_1_bus_volt.csv  2_2_bus_volt.csv  2_2_bus_voltCOPY.csv  Assignment_2_Question_4.ipynb  Assignment_3_Question_1.ipynb  Assignment_3_Question_2.ipynb  q2_2_line_loading.csv  q2_power.csv  q2_powers.csv  question_1_inputs.csv
Assignment_4/: 3_1_1_IC_Curve_Data.csv  3_2_2_IC_Curve_Data.csv  Assigment_4_Question_1.ipynb  Assignment_4_Question_2.ipynb  Assignment_4_Question_3.ipynb
