[project]
name = "power-systems-5-assignments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib==3.10.1",
    "notebook==7.4.0",
    "numpy==2.2.4",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "sympy==1.13.3",
    "tabulate==0.9.0",
]
